<resources>
    <string name="app_name">WebDevLabs</string>
    <string name="welcome_title">Добро пожаловать!</string>
    <string name="login_subtitle">Войдите в свой аккаунт</string>
    <string name="create_account_title">Регистрация</string>
    <string name="registration_subtitle">Создайте новый аккаунт</string>
    <string name="email_hint">example@mail.ru</string>
    <string name="phone_hint">+7 900 123-45-67</string>
    <string name="phone_mode">По номеру</string>
    <string name="email_mode">По email</string>
    <string name="contact_label">Телефон или email</string>
    <string name="password_label">Пароль</string>
    <string name="password_hint">Введите пароль</string>
    <string name="repeat_password_label">Повторите пароль</string>
    <string name="repeat_password_hint">Введите пароль ещё раз</string>
    <string name="login_contact_label">Телефон или email</string>
    <string name="login_contact_hint">Введите телефон или email</string>
    <string name="remember_me">Входить автоматически</string>
    <string name="accept_terms">Я принимаю условия использования</string>
    <string name="login_button">Войти</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="no_account">Нет аккаунта? Зарегистрироваться</string>
    <string name="already_have_account">Уже есть аккаунт? Войти</string>
    <string name="invalid_email">Email должен содержать символ @</string>
    <string name="invalid_phone">Номер телефона должен содержать символ +</string>
    <string name="short_password">Пароль должен содержать минимум 8 символов</string>
    <string name="passwords_do_not_match">Пароли не совпадают</string>
    <string name="invalid_credentials">Неверный телефон/email или пароль</string>
    <string name="content_title">Вы вошли в систему</string>
    <string name="content_description">Это четвёртый экран — ContentActivity</string>
    <string name="logout">Выйти</string>
    <string name="logout_and_reset">Выйти и сбросить настройки</string>
</resources>
